fix(analytics): 🐛 it navigates to the right chart but jumps
Hard code fake height for each chart

see: commit 4638043

--- a/src/pages/Analytics/Layout.module.css
+++ b/src/pages/Analytics/Layout.module.css
@@ -132,9 +132,3 @@
 .CardWrapper:not(:last-child) {
   margin-bottom: 2rem;
 }
-
-.FakeChartTitlesWrapper {
-  background: #ffffff;
-  border-radius: 6px;
-  min-height: 600px;
-}
